--- a/stylus/base/_base.styl
+++ b/stylus/base/_base.styl
@@ -20,7 +20,7 @@ body
   font-size fontSizeBase
   line-height lineHeightBase
   font-weight fontWeightNormal
-  background-color #f5f4f6
+  background-color mintColor
   letter-spacing letterSpacingBase
   color feldgrauColor
   margin 0
@@ -86,3 +86,9 @@ figure
 
 .nuxt-link-exact-active
   pointer-events none
+
+.MainContent
+  margin-bottom 90px
+  background-color #f7f9fb
+  position relative
+  z-index 2
