--- a/stylus/placeholders.styl
+++ b/stylus/placeholders.styl
@@ -45,3 +45,67 @@ $article
     font-size 2rem
     margin-top 0.2em
     margin-bottom 0.2em
+
+$button
+  border 3px solid transparent
+  background-color #2c97de
+  border-radius .25em
+  padding spacingSmall spacingBase
+  color #fff
+  text-align center
+  float right
+  cursor pointer
+  -webkit-font-smoothing antialiased
+  -moz-osx-font-smoothing grayscale
+  appearance none
+  line-height 1
+  display inline-block
+  transition .2s background-color timingFunction, .2s color timingFunction
+  font-weight fontWeightBold
+  text-decoration none
+  font-size inherit
+  &:focus
+    outline none
+  &:active
+    transform scale(0.99)
+
+$buttonDefault
+  @extend $button
+  border-color mintColor
+  background-color mintColor
+  color #fff
+  &:hover,
+  &:focus
+    background-color lighten(mintColor, 10%)
+    border-color lighten(mintColor, 10%)
+    color #fff
+
+$buttonGhost
+  @extend $button
+  border-color mintColor
+  background-color transparent
+  color mintColor
+  &:hover,
+  &:focus
+    background-color mintColor
+    color #fff
+
+$buttonGhostWhite
+  @extend $button
+  background-color transparent
+  border-color #fff
+  color #fff
+  &:hover,
+  &:focus
+    background-color rgba(#fff, .2)
+    outline-color #fff
+    color #fff
+
+$buttonLarge
+  border-radius 8px
+  padding spacingBase
+  font-size fontSizeBase
+
+$buttonSmall
+  font-size .8rem
+  padding spacingMini
