--- a/stylus/base/_animations.styl
+++ b/stylus/base/_animations.styl
@@ -1,13 +1,14 @@
-.page-enter-active,
-.page-leave-active
-  .container,
-  .container--small,
-  .aboutme__section
-    transition: opacity .5s, transform .5s
-.page-enter,
-.page-leave-active
-  .container,
-  .container--small,
-  .aboutme__section
-    opacity: 0
-    transform translate3d(-10px, 0, 0)
+.page
+  &-enter-active,
+  &-leave-active
+    .container,
+    .container--small,
+    .aboutme__section
+      transition: opacity .5s, transform .5s
+  &-enter,
+  &-leave-active
+    .container,
+    .container--small,
+    .aboutme__section
+      opacity: 0
+      transform translate3d(-10px, 0, 0)
