Colors and styleguide

--- a/stylus/base/_base.styl
+++ b/stylus/base/_base.styl
@@ -21,9 +21,9 @@ body
   font-size fontSizeBase
   line-height lineHeightBase
   font-weight fontWeightNormal
-  background-color mintColor
+  background-color primaryColor
   letter-spacing letterSpacingBase
-  color feldgrauColor
+  color baseColor
   margin 0
   padding 0
   border 0px solid transparent
@@ -44,7 +44,7 @@ body
       top 0
       border inherit
       border-bottom-width 0
-      border-color mintColor
+      border-color primaryColor
       will-change border-color
       transition border-width 0.4s cubic-bezier(0.18, 0.98, 0.45, 1),
         border-color 1s cubic-bezier(0.18, 0.98, 0.45, 1)
