--- a/stylus/layouts/_tooltip.styl
+++ b/stylus/layouts/_tooltip.styl
@@ -2,7 +2,7 @@
   display block
   z-index 100
   .tooltip-inner
-    background davysGreyColor
+    background grayColor
     color white
     font-size fontSizeMini
     border-radius 4px
@@ -13,7 +13,7 @@
     border-style solid
     position absolute
     margin 5px
-    border-color davysGreyColor
+    border-color grayColor
   &[x-placement^="top"]
     margin-bottom 5px
     .tooltip-arrow
