--- a/stylus/variables.styl
+++ b/stylus/variables.styl
@@ -22,15 +22,15 @@ fontWeightRegular = 500
 fontWeightBold = 700
 
 /* color pallete */
-mintColor = #4dba87
-oceanBlueColor = #0072c3
-khakiColor = #efe683
-honeydewColor = #e9fff2
-davysGreyColor = #5b5b5b
-feldgrauColor = #435466
-snowColor = #fcfafa
-borderColor = rgba(davysGreyColor, 0.1)
-linkColor = mintColor
+primaryColor = #4dba87
+secondaryColor = #0072c3
+tertiaryColor = #efe683
+silverColor = #e9fff2
+grayColor = #5b5b5b
+baseColor = #435466
+backgroundColor = #fcfafa
+borderColor = rgba(grayColor, 0.1)
+linkColor = primaryColor
 
 /* borders */
 borderRadiusBase = 0.1875rem
