--- a/stylus/variables.styl
+++ b/stylus/variables.styl
@@ -50,9 +50,10 @@ spacingBig = 4rem
 
 /* breakpoints and container width */
 xs = 0
-sm = 520px
-md = 768px
-lg = 992px
-xlg = 1200px
-containerWidth = 1260px
-containerWidthSmall = 730px
+sm = 32.5rem // 520px
+md = 48rem // 768px
+lg = 62rem // 992px
+xlg = 75rem // 1200px
+
+containerWidth = 78.75rem // 1260px
+containerWidthSmall = 45.625rem // 730px
