--- a/stylus/placeholders.styl
+++ b/stylus/placeholders.styl
@@ -50,7 +50,7 @@ $button
   border 3px solid transparent
   background-color #2c97de
   border-radius .25em
-  padding spacingSmall spacingBase
+  padding 0 spacingBase
   color #fff
   text-align center
   float right
@@ -58,7 +58,7 @@ $button
   -webkit-font-smoothing antialiased
   -moz-osx-font-smoothing grayscale
   appearance none
-  line-height 1
+  line-height 2.3125rem
   display inline-block
   transition .2s background-color timingFunction, .2s color timingFunction
   font-weight fontWeightBold
@@ -102,10 +102,12 @@ $buttonGhostWhite
     color #fff
 
 $buttonLarge
-  border-radius 8px
-  padding spacingBase
+  border-radius .5rem
+  padding 0 spacingBase
   font-size fontSizeBase
+  line-height 2.9375rem
 
 $buttonSmall
   font-size .8rem
-  padding spacingMini
+  padding 0 spacingMini
+  line-height 1.6875rem
