--- a/stylus/variables.styl
+++ b/stylus/variables.styl
@@ -7,7 +7,7 @@ fontFamilyMonospace = "Fira Code", Menlo, Monaco, "Courier New", Courier, monosp
 /* font size */
 fontSizeUnit = 18px
 fontSizeBase = 1rem
-fontSizeSmall = 0.875rem
+fontSizeSmall = .75rem
 fontSizeMini = 0.65rem
 fontSizeBig = 1.4rem
 
