--- a/stylus/base/_typography.styl
+++ b/stylus/base/_typography.styl
@@ -146,9 +146,9 @@ code
 
 pre
   background rgba(grayColor, 0.05)
-  padding 0 spacingMini / 2
+  padding (spacingMini / 2)
   font-size fontSizeSmall
-  & > code
+  > code
     font-size inherit
     background transparent
     border-radius 0
