--- a/stylus/variables.styl
+++ b/stylus/variables.styl
@@ -1,5 +1,5 @@
 /* font family */
-fontFamilyBase = "Ubuntu", Lato, Calibri, Arial, sans-serif
+fontFamilyBase = "Ubuntu", Lato, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
 fontFamilyHeading = "Suez One", fontFamilyBase
 fontFamilySerif = Georgia, "Times New Roman", Times, serif
 fontFamilyMonospace = "Fira Code", Menlo, Monaco, "Courier New", Courier, monospace
